Add machine changes from over the weekend

--- a/environments/india/inventory.ini
+++ b/environments/india/inventory.ini
@@ -17,23 +17,23 @@
 [celery1]
 10.203.10.13 hostname=celery1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 [couch2]
-10.203.40.122 hostname=couch2-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+10.203.40.187 hostname=couch2-india ufw_private_interface=eth0
 [couch3]
-10.203.40.114 hostname=couch3-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+10.203.40.186 hostname=couch3-india ufw_private_interface=eth0
 [couch4]
-10.203.40.189 hostname=couch4-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+10.203.40.188 hostname=couch4-india ufw_private_interface=eth0
 [redis0]
 10.203.40.128 hostname=redis0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 [es0]
-10.203.40.175 hostname=es0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+10.203.40.175 hostname=es0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 elasticsearch_node_name=es0 elasticsearch_node_zone=aws
 [es1]
-10.203.40.142 hostname=es1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+10.203.40.142 hostname=es1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 elasticsearch_node_name=es1 elasticsearch_node_zone=aws
 [formplayer1]
 10.203.10.208 hostname=formplayer1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 [pillow2]
 10.203.10.9 hostname=pillow2-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 [kafka1]
-10.203.40.207 hostname=kafka1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+10.203.40.207 hostname=kafka1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 kafka_broker_id=1
 [pgbouncer0]
 10.203.40.199 hostname=pgbouncer0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 [proxy1]
@@ -112,13 +112,13 @@ datavol_device=/dev/xvdc
 10.162.36.202 hostname="riak19.india.commcarehq.org" encrypted_root=/opt/data/ecrypt
 
 [couch1]
-10.162.36.218 hostname="couch1.india.commcarehq.org" encrypted_root=/opt/data/ecrypt
+10.162.36.218 hostname="couch1.india.commcarehq.org"
 
 [couch5]
-10.162.36.208 hostname="couch5.india.commcarehq.org" encrypted_root=/opt/data/ecrypt
+10.162.36.208 hostname="couch5.india.commcarehq.org"
 
 [couch6]
-10.162.36.234 hostname="couch6.india.commcarehq.org" encrypted_root=/opt/data/ecrypt
+10.162.36.234 hostname="couch6.india.commcarehq.org"
 
 [couch_big_nodes:children]
 couch1
