--- a/src/commcare_cloud/ansible/deploy_postgres.yml
+++ b/src/commcare_cloud/ansible/deploy_postgres.yml
@@ -25,6 +25,15 @@
 - name: Remote PostgreSQL (e.g. Amazon RDS)
   hosts: django_manage
   tasks:
+    - name: Install python-psycopg2 to be able to set up remote postgresql
+      become: yes
+      block:
+        - apt: name={{ item }} state=latest
+          with_items:
+            - libpq-dev
+        - pip: name={{ item }} state=present
+          with_items:
+            - psycopg2
     - name: Remote PostgreSQL
       include_role:
         name: postgresql_base
@@ -35,6 +44,8 @@
       vars:
         db_is_remote: yes
         is_pg_standby: no
+  tags:
+    - remote_postgresql
 
 - name: PostgreSQL Backup
   hosts: postgresql:pg_backup
