--- a/environments/india/public.yml
+++ b/environments/india/public.yml
@@ -61,6 +61,7 @@ couchdb_cluster_settings:
 s3_blob_db_enabled: yes
 s3_blob_db_url: "https://s3.amazonaws.com"
 s3_blob_db_s3_bucket: 'dimagi-commcare-india-blobdb'
+s3_signature_version: 's3v4'
 
 
 TWO_FACTOR_GATEWAY_ENABLED: True
@@ -68,7 +69,7 @@ TWO_FACTOR_GATEWAY_ENABLED: True
 # Copied from all.yml, hardcoded proxy0 instead of the first proxy host.
 # This is a temporary setup that lets us route traffic through the softlayer proxy
 # to be closer to the riakcs machines it serves.
-s3_blob_db_url: "http://{{ groups['proxy0'][0] }}:{{ riakcs_proxy_port }}"
+old_s3_blob_db_url: "http://{{ groups['proxy0'][0] }}:{{ riakcs_proxy_port }}"
 
 localsettings:
   ALLOWED_HOSTS:
