--- a/environments/india/app-processes.yml
+++ b/environments/india/app-processes.yml
@@ -2,7 +2,7 @@ formplayer_memory: "7000m"
 newrelic_javaagent: True
 celery_processes:
   celery1:
-#    beat: {}
+    beat: {}
     flower: {}
     reminder_queue:
       pooling: gevent
@@ -22,29 +22,10 @@ celery_processes:
       optimize: True
     background_queue:
       concurrency: 5
-  celery0:
-    beat: {}
-#    flower: {}
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-    submission_reprocessing_queue:
-      concurrency: 1
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-    email_queue,repeat_record_queue,sumologic_logs_queue,reminder_case_update_queue,icds_aggregation_queue,analytics_queue:
-      pooling: gevent
-      concurrency: 200
-    ucr_queue,ucr_indicator_queue,celery,export_download_queue,reminder_rule_queue,case_import_queue,case_rule_queue,icds_dashboard_reports_queue,async_restore_queue,celery_periodic:
-      concurrency: 3
-    saved_exports_queue:
-      concurrency: 2
-      optimize: True
-    background_queue:
-      concurrency: 5
+  celery0: {}
 pillows:
-  'pillow2':
+  pillow1: {}
+  pillow2:
     AppDbChangeFeedPillow:
       num_processes: 1
     ApplicationToElasticsearchPillow:
