--- a/src/commcare_cloud/ansible/roles/kafka/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/kafka/tasks/main.yml
@@ -9,8 +9,8 @@
 - name: Set JMX_PORT in /etc/environment
   lineinfile:
     dest: /etc/environment
-    line: 'JMX_PORT=9999'
-    state: present
+    line: 'JMX_PORT={{ KAFKA_JMX_PORT }}'
+    state: {{ 'present' if ansible_distribution_version == '14.04' else 'absent' }}
 
 - name: Download Kafka
   get_url: url="http://{{ apache_mirror }}/kafka/{{ kafka_version }}/kafka_2.10-{{ kafka_version }}.tgz" dest="/opt/kafka_2.10-{{ kafka_version }}.tgz"
