--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,14 @@
 #    pip-compile --output-file=requirements.txt requirements-python-lt-2.7.9-ssl-issue.in setup.py
 #
 ansible-vault==1.1.1
-ansible==2.5.0
+ansible==2.8.0
 argparse==1.4.0
 args==0.1.0               # via clint
 asn1crypto==0.24.0        # via cryptography
 attrs==19.1.0
 bcrypt==3.1.6             # via paramiko
-boto3==1.9.151
-botocore==1.12.151        # via boto3, s3transfer
+boto3==1.9.153
+botocore==1.12.153        # via boto3, s3transfer
 certifi==2019.3.9         # via requests
 cffi==1.12.3              # via bcrypt, cryptography, pynacl
 chardet==3.0.4            # via requests
@@ -39,7 +39,7 @@ jsonobject==0.9.9
 markupsafe==1.1.1         # via jinja2
 ndg-httpsclient==0.5.1
 netaddr==0.7.19
-paramiko==2.4.2           # via ansible, fabric
+paramiko==2.4.2           # via fabric
 passlib==1.7.1
 pyasn1==0.4.5             # via ndg-httpsclient, paramiko
 pycparser==2.19           # via cffi
