fix deprecated syntax

--- a/src/commcare_cloud/ansible/deploy_riakcs_new.yml
+++ b/src/commcare_cloud/ansible/deploy_riakcs_new.yml
@@ -81,7 +81,8 @@
   vars_files:
     - roles/riakcs/install/defaults/main.yml
   tasks:
-    - import_tasks: roles/riakcs/get_admin_keys.yml tags=localsettings
+    - import_tasks: roles/riakcs/get_admin_keys.yml
+      tags: localsettings
 
 - name: Install Riak and Riak CS
   become: true
