--- a/src/commcare_cloud/ansible/roles/postgresql_base/tasks/set_up_dbs.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/tasks/set_up_dbs.yml
@@ -78,6 +78,26 @@
   assert: { that: "item.host in groups.postgresql or item.host in groups.pg_standby or item.host == '127.0.0.1' or item.host in groups.citusdb_cordinator " }
   with_items: "{{ postgresql_dbs.all }}"
 
+- name: Create PostgreSQL databases
+  become_user: "{{ db_is_remote and 'ansible' or 'postgres' }}"
+  vars:
+    ansible_ssh_pipelining: true
+  postgresql_db:
+    name: "{{ item.name }}"
+    state: present
+    port: "{{ postgresql_port }}"
+    owner: "{{ item.user }}"
+    encoding: 'UTF-8'
+    lc_collate: 'en_US.UTF-8'
+    lc_ctype: 'en_US.UTF-8'
+    template: 'template0'
+    login_host: "{{ db_is_remote and postgresql_host or omit }}"
+    login_user: "{{ db_is_remote and postgres_users.root.username or omit }}"
+    login_password: "{{ db_is_remote and postgres_users.root.password or omit }}"
+
+  with_items: "{{ postgresql_dbs.all }}"
+  when: item.create and ((item.host == postgresql_host) or is_monolith|bool)
+
 - name: Update PostgreSQL database config
   become_user: "{{ db_is_remote and 'ansible' or 'postgres' }}"
   vars:
