--- a/src/commcare_cloud/ansible/roles/postgresql_base/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/tasks/main.yml
@@ -84,6 +84,16 @@
     group: postgres
   when: postgresql_enable_archive
 
+- name: Create clean WAL archive cron
+  become: yes
+  cron:
+    name: "Clean PG WAL Archive"
+    job: "find {{ postgresql_archive_path }} -mtime '+1d' -delete"
+    user: root
+    special_time: hourly
+    cron_file: clean_pg_archive
+    state: present
+
 - name: PostgreSQL app configuration
   template: src=postgresql.conf.j2 dest="{{ postgresql_config_home }}/postgresql.conf" owner="postgres"
   tags: configure
