keep logs for 60 mins

--- a/src/commcare_cloud/ansible/roles/postgresql_base/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/tasks/main.yml
@@ -88,7 +88,7 @@
   become: yes
   cron:
     name: "Clean PG WAL Archive"
-    job: "find {{ postgresql_archive_path }} -mtime 1 -delete"
+    job: "find {{ postgresql_archive_path }} -mmin +60 -delete"
     user: root
     special_time: hourly
     cron_file: clean_pg_archive
