--- a/environments/india/app-processes.yml
+++ b/environments/india/app-processes.yml
@@ -20,7 +20,7 @@ celery_processes:
     saved_exports_queue:
       concurrency: 2
       optimize: True
-    background_queue:
+    background_queue,dashboard_comparison_queue:
       concurrency: 5
 pillows:
   pillow2:
