--- a/src/commcare_cloud/ansible/roles/couchdb/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/couchdb/tasks/main.yml
@@ -52,7 +52,10 @@
   when: not couchdb_path.stat.exists and couchdb_compile|success
 
 - name: Add CouchDB user
-  user: name=couchdb createhome=no password=no state=present
+  user:
+    name: couchdb
+    home: '{{ couchdb_dir }}'
+    state: present
 
 - name: Apply CouchDB config
   template: src=local.ini.j2 dest=/usr/local/etc/couchdb/local.ini
