install Python PPA to support 3.7

--- a/src/commcare_cloud/ansible/roles/common_installs/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/common_installs/tasks/main.yml
@@ -16,6 +16,10 @@
   register: add_pango_repo
   when: ansible_distribution_version == '14.04'
 
+- name: Add Python PPA
+  apt_repository: repo='ppa:deadsnakes/ppa' state=present
+  register: add_python_ppa
+
 - name: Update package list
   apt: update_cache=yes
   when: add_mosh_repo is changed or add_postgres_repo is changed or add_pango_repo is changed
@@ -57,6 +61,8 @@
     - monit # service restarter
     - libcairo2
     - libpango1.0-0
+    - python3.7
+    - python3.7-dev
 
 - include: trusty_apt_installs.yml
   when: ansible_distribution_version == '14.04'
