--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/main.yml
@@ -112,7 +112,19 @@
     - six
     - pip
     - setuptools
-        
+
+- name: py3 Upgrade python packages
+  pip:
+    name: "{{ item }}"
+    state: latest
+    virtualenv: "{{ py3_virtualenv_home }}"
+  with_items:
+    - six
+    - pip
+    - setuptools
+  tags:
+    - py3
+
 - name: chown virtualenv
   become: true
   file:
