Change the prove-deploy tag to [prove-deploy]
It was formerly "pv-deploy" which although it sort of sounds the same ("pv" short for "prove"?)
was originally, I think, just the intitials of the developer working on setting up the system.

This commit also allows for deploys with multi-line commit message bodies
to trigger prove-deploy build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ matrix:
 before_install:
   # The next line exits out of the prove-deploy test if
   #   - the test is not running from a cron event
-  #   - the last commit that was merged in doesn't contain [pv-test]
+  #   - the last commit that was merged in doesn't contain [prove-deploy]
   - |
     if [[ $TEST = 'prove-deploy' && $TRAVIS_EVENT_TYPE != 'cron' ]] &&
-      git log --pretty=format:'%s %b' -n1 HEAD^2 | grep -iv '\[pv-deploy\]'
+    echo $(git log --pretty=format:'%s %b' -n1 HEAD^2) | grep -iv '\[prove-deploy\]'
     then
       exit 0
     fi
