--- a/src/commcare_cloud/ansible/roles/nginx/tasks/install.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/tasks/install.yml
@@ -1,13 +1,7 @@
 ---
-- name: Remove official nginx repository
-  become: yes
-  apt_repository: repo='ppa:nginx/stable' state=absent
-  when: ansible_distribution_version == '14.04'
-
 - name: Add nginx repository
   become: yes
-  apt_repository: repo='ppa:ondrej/nginx' state=present
-  with_items: "{{ 'ppa:ondrej/nginx' if ansible_distribution_version == '14.04' else 'ppa:nginx/stable' }}"
+  apt_repository: repo='ppa:nginx/stable' state=present
 
 - name: Install nginx
   become: yes
