build in 18.04, use PPA in 14.04

--- a/src/commcare_cloud/ansible/roles/common_installs/tasks/bionic_apt_installs.yml
+++ b/src/commcare_cloud/ansible/roles/common_installs/tasks/bionic_apt_installs.yml
@@ -7,3 +7,8 @@
     - python-minimal
     - python3-pip
     - ufw
+    - libbz2-dev
+
+- name: Install Python 3.6.8
+  become: yes
+  script: install_python_3.6.8.sh
