use Python 3 for all HQ code

--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/supervisor_errand_boy.conf
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/supervisor_errand_boy.conf
@@ -2,7 +2,7 @@
 directory={{ code_home }}/
 ; gunicorn
 environment=
-command={% if PY3_RUN_ERRAND_BOY %}{{ py3_virtualenv_home }}{% else %}{{ virtualenv_home }}{% endif %}/bin/python
+command={{ py3_virtualenv_home }}/bin/python
     -m errand_boy.run
 user={{ cchq_user }}
 autostart=true
