--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/supervisor_websockets.conf
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/supervisor_websockets.conf
@@ -1,7 +1,7 @@
 [program:{{ project }}-{{ deploy_env }}-websockets]
 directory={{ code_home }}
-command={% if PY3_RUN_WEBSOCKETS %}{{ py3_virtualenv_home }}{% else %}{{ virtualenv_home }}{% endif %}/bin/uwsgi
-    --virtualenv {% if PY3_RUN_WEBSOCKETS %}{{ py3_virtualenv_home }}{% else %}{{ virtualenv_home }}{% endif %}
+command={{ py3_virtualenv_home }}/bin/uwsgi
+    --virtualenv {{ py3_virtualenv_home }}
     --http-socket {{ www_home }}/web.socket
     --gevent 1000
     --http-websockets
