--- a/src/commcare_cloud/ansible/roles/postgresql_base/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/tasks/main.yml
@@ -36,6 +36,13 @@
     - python3-psycopg2
   when: ansible_distribution_version == '18.04'
 
+- name: Configure service limits
+  template:
+    src: systemd_limits.conf.j2
+    dest: "/etc/systemd/system/postgresql@.service.d/limits.conf"
+    owner: root
+  notify: Restart postgres
+
 - name: Check for original postgresql directory
   stat: path="{{ postgresql_dir_original_path }}/{{ postgresql_version }}/{{ postgresql_cluster_name }}/PG_VERSION"
   register: orig_path
