gerenate list of PG databases by host
for pgbouncer.ini we need to know which DBs it is giving access
to

--- a/tests/postgresql_config/2018-04-04-icds-new-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-icds-new-snapshot/.generated.yml
@@ -1,6 +1,7 @@
 postgresql_dbs:
   all:
-  - create: true
+  - &id013
+    create: true
     django_alias: default
     django_migrate: true
     host: 10.247.164.26
@@ -12,7 +13,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id009
+    create: true
     django_alias: icds-ucr
     django_migrate: true
     host: 10.247.164.25
@@ -37,7 +39,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id018
+    create: true
     django_alias: p1
     django_migrate: true
     host: 10.247.164.66
@@ -48,11 +51,10 @@ postgresql_dbs:
     pgbouncer_host: 10.247.164.66
     port: 6432
     query_stats: false
-    shards:
-    - 0
-    - 103
+    shards: [0, 103]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id016
+    create: true
     django_alias: p10
     django_migrate: true
     host: 10.247.164.64
@@ -63,11 +65,10 @@ postgresql_dbs:
     pgbouncer_host: 10.247.164.64
     port: 6432
     query_stats: false
-    shards:
-    - 927
-    - 1023
+    shards: [927, 1023]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id019
+    create: true
     django_alias: p2
     django_migrate: true
     host: 10.247.164.66
@@ -78,11 +79,10 @@ postgresql_dbs:
     pgbouncer_host: 10.247.164.66
     port: 6432
     query_stats: false
-    shards:
-    - 104
-    - 205
+    shards: [104, 205]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id004
+    create: true
     django_alias: p3
     django_migrate: true
     host: 10.247.164.21
@@ -93,11 +93,10 @@ postgresql_dbs:
     pgbouncer_host: 10.247.164.21
     port: 6432
     query_stats: false
-    shards:
-    - 206
-    - 308
+    shards: [206, 308]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id005
+    create: true
     django_alias: p4
     django_migrate: true
     host: 10.247.164.21
@@ -108,11 +107,10 @@ postgresql_dbs:
     pgbouncer_host: 10.247.164.21
     port: 6432
     query_stats: false
-    shards:
-    - 309
-    - 411
+    shards: [309, 411]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id006
+    create: true
     django_alias: p5
     django_migrate: true
     host: 10.247.164.21
@@ -123,11 +121,10 @@ postgresql_dbs:
     pgbouncer_host: 10.247.164.21
     port: 6432
     query_stats: false
-    shards:
-    - 412
-    - 514
+    shards: [412, 514]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id001
+    create: true
     django_alias: p6
     django_migrate: true
     host: 10.247.164.20
@@ -138,11 +135,10 @@ postgresql_dbs:
     pgbouncer_host: 10.247.164.20
     port: 6432
     query_stats: false
-    shards:
-    - 515
-    - 617
+    shards: [515, 617]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id002
+    create: true
     django_alias: p7
     django_migrate: true
     host: 10.247.164.20
@@ -153,11 +149,10 @@ postgresql_dbs:
     pgbouncer_host: 10.247.164.20
     port: 6432
     query_stats: false
-    shards:
-    - 618
-    - 720
+    shards: [618, 720]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id003
+    create: true
     django_alias: p8
     django_migrate: true
     host: 10.247.164.20
@@ -168,11 +163,10 @@ postgresql_dbs:
     pgbouncer_host: 10.247.164.20
     port: 6432
     query_stats: false
-    shards:
-    - 721
-    - 823
+    shards: [721, 823]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id017
+    create: true
     django_alias: p9
     django_migrate: true
     host: 10.247.164.64
@@ -183,11 +177,10 @@ postgresql_dbs:
     pgbouncer_host: 10.247.164.64
     port: 6432
     query_stats: false
-    shards:
-    - 824
-    - 926
+    shards: [824, 926]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id015
+    create: true
     django_alias: proxy
     django_migrate: true
     host: 10.247.164.56
@@ -199,7 +192,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id023
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: 10.247.164.70
@@ -211,7 +205,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id010
+    create: true
     django_alias: ucr
     django_migrate: false
     host: 10.247.164.25
@@ -223,7 +218,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id011
+    create: true
     django_alias: null
     django_migrate: true
     host: 10.247.164.25
@@ -235,6 +231,40 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
+  by_host:
+    10.247.164.20: &id007
+    - *id001
+    - *id002
+    - *id003
+    10.247.164.21: &id008
+    - *id004
+    - *id005
+    - *id006
+    10.247.164.22: *id007
+    10.247.164.23: *id008
+    10.247.164.24: &id012
+    - *id009
+    - *id010
+    - *id011
+    10.247.164.25: *id012
+    10.247.164.26: &id014
+    - *id013
+    10.247.164.27: *id014
+    10.247.164.56:
+    - *id015
+    10.247.164.64: &id022
+    - *id016
+    - *id017
+    10.247.164.65: &id020 []
+    10.247.164.66: &id021
+    - *id018
+    - *id019
+    10.247.164.67: *id020
+    10.247.164.68: *id021
+    10.247.164.69: *id022
+    10.247.164.70:
+    - *id023
+    10.247.164.99: *id012
   custom:
   - create: true
     django_alias: icds-ucr
@@ -262,9 +292,7 @@ postgresql_dbs:
         pgbouncer_host: 10.247.164.66
         port: 6432
         query_stats: false
-        shards:
-        - 0
-        - 103
+        shards: [0, 103]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p10:
         create: true
@@ -278,9 +306,7 @@ postgresql_dbs:
         pgbouncer_host: 10.247.164.64
         port: 6432
         query_stats: false
-        shards:
-        - 927
-        - 1023
+        shards: [927, 1023]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
         create: true
@@ -294,9 +320,7 @@ postgresql_dbs:
         pgbouncer_host: 10.247.164.66
         port: 6432
         query_stats: false
-        shards:
-        - 104
-        - 205
+        shards: [104, 205]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
         create: true
@@ -310,9 +334,7 @@ postgresql_dbs:
         pgbouncer_host: 10.247.164.21
         port: 6432
         query_stats: false
-        shards:
-        - 206
-        - 308
+        shards: [206, 308]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
         create: true
@@ -326,9 +348,7 @@ postgresql_dbs:
         pgbouncer_host: 10.247.164.21
         port: 6432
         query_stats: false
-        shards:
-        - 309
-        - 411
+        shards: [309, 411]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
         create: true
@@ -342,9 +362,7 @@ postgresql_dbs:
         pgbouncer_host: 10.247.164.21
         port: 6432
         query_stats: false
-        shards:
-        - 412
-        - 514
+        shards: [412, 514]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p6:
         create: true
@@ -358,9 +376,7 @@ postgresql_dbs:
         pgbouncer_host: 10.247.164.20
         port: 6432
         query_stats: false
-        shards:
-        - 515
-        - 617
+        shards: [515, 617]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p7:
         create: true
@@ -374,9 +390,7 @@ postgresql_dbs:
         pgbouncer_host: 10.247.164.20
         port: 6432
         query_stats: false
-        shards:
-        - 618
-        - 720
+        shards: [618, 720]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p8:
         create: true
@@ -390,9 +404,7 @@ postgresql_dbs:
         pgbouncer_host: 10.247.164.20
         port: 6432
         query_stats: false
-        shards:
-        - 721
-        - 823
+        shards: [721, 823]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p9:
         create: true
@@ -406,9 +418,7 @@ postgresql_dbs:
         pgbouncer_host: 10.247.164.64
         port: 6432
         query_stats: false
-        shards:
-        - 824
-        - 926
+        shards: [824, 926]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
       create: true
