--- a/tests/postgresql_config/2018-04-04-pna-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-pna-snapshot/.generated.yml
@@ -1,6 +1,7 @@
 postgresql_dbs:
   all:
-  - create: true
+  - &id001
+    create: true
     django_alias: default
     django_migrate: true
     host: 196.207.230.171
@@ -12,7 +13,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id002
+    create: true
     django_alias: p1
     django_migrate: true
     host: 196.207.230.171
@@ -23,11 +25,10 @@ postgresql_dbs:
     pgbouncer_host: 196.207.230.171
     port: 6432
     query_stats: false
-    shards:
-    - 0
-    - 103
+    shards: [0, 103]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id003
+    create: true
     django_alias: p10
     django_migrate: true
     host: 196.207.230.171
@@ -38,11 +39,10 @@ postgresql_dbs:
     pgbouncer_host: 196.207.230.171
     port: 6432
     query_stats: false
-    shards:
-    - 927
-    - 1023
+    shards: [927, 1023]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id004
+    create: true
     django_alias: p2
     django_migrate: true
     host: 196.207.230.171
@@ -53,11 +53,10 @@ postgresql_dbs:
     pgbouncer_host: 196.207.230.171
     port: 6432
     query_stats: false
-    shards:
-    - 104
-    - 205
+    shards: [104, 205]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id005
+    create: true
     django_alias: p3
     django_migrate: true
     host: 196.207.230.171
@@ -68,11 +67,10 @@ postgresql_dbs:
     pgbouncer_host: 196.207.230.171
     port: 6432
     query_stats: false
-    shards:
-    - 206
-    - 308
+    shards: [206, 308]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id006
+    create: true
     django_alias: p4
     django_migrate: true
     host: 196.207.230.171
@@ -83,11 +81,10 @@ postgresql_dbs:
     pgbouncer_host: 196.207.230.171
     port: 6432
     query_stats: false
-    shards:
-    - 309
-    - 411
+    shards: [309, 411]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id007
+    create: true
     django_alias: p5
     django_migrate: true
     host: 196.207.230.171
@@ -98,11 +95,10 @@ postgresql_dbs:
     pgbouncer_host: 196.207.230.171
     port: 6432
     query_stats: false
-    shards:
-    - 412
-    - 514
+    shards: [412, 514]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id008
+    create: true
     django_alias: p6
     django_migrate: true
     host: 196.207.230.171
@@ -113,11 +109,10 @@ postgresql_dbs:
     pgbouncer_host: 196.207.230.171
     port: 6432
     query_stats: false
-    shards:
-    - 515
-    - 617
+    shards: [515, 617]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id009
+    create: true
     django_alias: p7
     django_migrate: true
     host: 196.207.230.171
@@ -128,11 +123,10 @@ postgresql_dbs:
     pgbouncer_host: 196.207.230.171
     port: 6432
     query_stats: false
-    shards:
-    - 618
-    - 720
+    shards: [618, 720]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id010
+    create: true
     django_alias: p8
     django_migrate: true
     host: 196.207.230.171
@@ -143,11 +137,10 @@ postgresql_dbs:
     pgbouncer_host: 196.207.230.171
     port: 6432
     query_stats: false
-    shards:
-    - 721
-    - 823
+    shards: [721, 823]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id011
+    create: true
     django_alias: p9
     django_migrate: true
     host: 196.207.230.171
@@ -158,11 +151,10 @@ postgresql_dbs:
     pgbouncer_host: 196.207.230.171
     port: 6432
     query_stats: false
-    shards:
-    - 824
-    - 926
+    shards: [824, 926]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id012
+    create: true
     django_alias: proxy
     django_migrate: true
     host: 196.207.230.171
@@ -174,7 +166,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id013
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: 196.207.230.171
@@ -186,7 +179,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id014
+    create: true
     django_alias: ucr
     django_migrate: false
     host: 196.207.230.171
@@ -198,7 +192,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id015
+    create: true
     django_alias: null
     django_migrate: true
     host: 196.207.230.171
@@ -210,6 +205,23 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
+  by_host:
+    196.207.230.171:
+    - *id001
+    - *id002
+    - *id003
+    - *id004
+    - *id005
+    - *id006
+    - *id007
+    - *id008
+    - *id009
+    - *id010
+    - *id011
+    - *id012
+    - *id013
+    - *id014
+    - *id015
   custom: []
   form_processing:
     partitions:
@@ -225,9 +237,7 @@ postgresql_dbs:
         pgbouncer_host: 196.207.230.171
         port: 6432
         query_stats: false
-        shards:
-        - 0
-        - 103
+        shards: [0, 103]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p10:
         create: true
@@ -241,9 +251,7 @@ postgresql_dbs:
         pgbouncer_host: 196.207.230.171
         port: 6432
         query_stats: false
-        shards:
-        - 927
-        - 1023
+        shards: [927, 1023]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
         create: true
@@ -257,9 +265,7 @@ postgresql_dbs:
         pgbouncer_host: 196.207.230.171
         port: 6432
         query_stats: false
-        shards:
-        - 104
-        - 205
+        shards: [104, 205]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
         create: true
@@ -273,9 +279,7 @@ postgresql_dbs:
         pgbouncer_host: 196.207.230.171
         port: 6432
         query_stats: false
-        shards:
-        - 206
-        - 308
+        shards: [206, 308]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
         create: true
@@ -289,9 +293,7 @@ postgresql_dbs:
         pgbouncer_host: 196.207.230.171
         port: 6432
         query_stats: false
-        shards:
-        - 309
-        - 411
+        shards: [309, 411]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
         create: true
@@ -305,9 +307,7 @@ postgresql_dbs:
         pgbouncer_host: 196.207.230.171
         port: 6432
         query_stats: false
-        shards:
-        - 412
-        - 514
+        shards: [412, 514]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p6:
         create: true
@@ -321,9 +321,7 @@ postgresql_dbs:
         pgbouncer_host: 196.207.230.171
         port: 6432
         query_stats: false
-        shards:
-        - 515
-        - 617
+        shards: [515, 617]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p7:
         create: true
@@ -337,9 +335,7 @@ postgresql_dbs:
         pgbouncer_host: 196.207.230.171
         port: 6432
         query_stats: false
-        shards:
-        - 618
-        - 720
+        shards: [618, 720]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p8:
         create: true
@@ -353,9 +349,7 @@ postgresql_dbs:
         pgbouncer_host: 196.207.230.171
         port: 6432
         query_stats: false
-        shards:
-        - 721
-        - 823
+        shards: [721, 823]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p9:
         create: true
@@ -369,9 +363,7 @@ postgresql_dbs:
         pgbouncer_host: 196.207.230.171
         port: 6432
         query_stats: false
-        shards:
-        - 824
-        - 926
+        shards: [824, 926]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
       create: true
