--- a/tests/postgresql_config/2018-04-04-production-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-production-snapshot/.generated.yml
@@ -1,6 +1,7 @@
 postgresql_dbs:
   all:
-  - create: true
+  - &id001
+    create: true
     django_alias: default
     django_migrate: true
     host: hqdb0.internal-va.commcarehq.org
@@ -12,7 +13,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id004
+    create: true
     django_alias: p1
     django_migrate: true
     host: hqdb1.internal-va.commcarehq.org
@@ -23,11 +25,10 @@ postgresql_dbs:
     pgbouncer_host: hqdb1.internal-va.commcarehq.org
     port: 6432
     query_stats: false
-    shards:
-    - 0
-    - 204
+    shards: [0, 204]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id005
+    create: true
     django_alias: p2
     django_migrate: true
     host: hqdb1.internal-va.commcarehq.org
@@ -38,11 +39,10 @@ postgresql_dbs:
     pgbouncer_host: hqdb1.internal-va.commcarehq.org
     port: 6432
     query_stats: false
-    shards:
-    - 205
-    - 409
+    shards: [205, 409]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id007
+    create: true
     django_alias: p3
     django_migrate: true
     host: hqdb2.internal-va.commcarehq.org
@@ -53,11 +53,10 @@ postgresql_dbs:
     pgbouncer_host: hqdb2.internal-va.commcarehq.org
     port: 6432
     query_stats: false
-    shards:
-    - 410
-    - 614
+    shards: [410, 614]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id008
+    create: true
     django_alias: p4
     django_migrate: true
     host: hqdb2.internal-va.commcarehq.org
@@ -68,11 +67,10 @@ postgresql_dbs:
     pgbouncer_host: hqdb2.internal-va.commcarehq.org
     port: 6432
     query_stats: false
-    shards:
-    - 615
-    - 819
+    shards: [615, 819]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id009
+    create: true
     django_alias: p5
     django_migrate: true
     host: hqdb2.internal-va.commcarehq.org
@@ -83,11 +81,10 @@ postgresql_dbs:
     pgbouncer_host: hqdb2.internal-va.commcarehq.org
     port: 6432
     query_stats: false
-    shards:
-    - 820
-    - 1023
+    shards: [820, 1023]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id006
+    create: true
     django_alias: proxy
     django_migrate: true
     host: hqdb1.internal-va.commcarehq.org
@@ -99,7 +96,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id010
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: pgsynclog.internal-va.commcarehq.org
@@ -111,7 +109,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id002
+    create: true
     django_alias: ucr
     django_migrate: false
     host: hqdb0.internal-va.commcarehq.org
@@ -123,7 +122,8 @@ postgresql_dbs:
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id003
+    create: true
     django_alias: null
     django_migrate: true
     host: hqdb0.internal-va.commcarehq.org
@@ -135,6 +135,21 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
+  by_host:
+    hqdb0.internal-va.commcarehq.org:
+    - *id001
+    - *id002
+    - *id003
+    hqdb1.internal-va.commcarehq.org:
+    - *id004
+    - *id005
+    - *id006
+    hqdb2.internal-va.commcarehq.org:
+    - *id007
+    - *id008
+    - *id009
+    pgsynclog.internal-va.commcarehq.org:
+    - *id010
   custom: []
   form_processing:
     partitions:
@@ -150,9 +165,7 @@ postgresql_dbs:
         pgbouncer_host: hqdb1.internal-va.commcarehq.org
         port: 6432
         query_stats: false
-        shards:
-        - 0
-        - 204
+        shards: [0, 204]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
         create: true
@@ -166,9 +179,7 @@ postgresql_dbs:
         pgbouncer_host: hqdb1.internal-va.commcarehq.org
         port: 6432
         query_stats: false
-        shards:
-        - 205
-        - 409
+        shards: [205, 409]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
         create: true
@@ -182,9 +193,7 @@ postgresql_dbs:
         pgbouncer_host: hqdb2.internal-va.commcarehq.org
         port: 6432
         query_stats: false
-        shards:
-        - 410
-        - 614
+        shards: [410, 614]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
         create: true
@@ -198,9 +207,7 @@ postgresql_dbs:
         pgbouncer_host: hqdb2.internal-va.commcarehq.org
         port: 6432
         query_stats: false
-        shards:
-        - 615
-        - 819
+        shards: [615, 819]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
         create: true
@@ -214,9 +221,7 @@ postgresql_dbs:
         pgbouncer_host: hqdb2.internal-va.commcarehq.org
         port: 6432
         query_stats: false
-        shards:
-        - 820
-        - 1023
+        shards: [820, 1023]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
       create: true
