--- a/tests/postgresql_config/2018-04-04-development-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-development-snapshot/.generated.yml
@@ -1,6 +1,7 @@
 postgresql_dbs:
   all:
-  - create: true
+  - &id001
+    create: true
     django_alias: default
     django_migrate: true
     host: 192.168.33.16
@@ -12,7 +13,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id002
+    create: true
     django_alias: ucr
     django_migrate: false
     host: 192.168.33.16
@@ -24,7 +26,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id003
+    create: true
     django_alias: null
     django_migrate: true
     host: 192.168.33.16
@@ -36,6 +39,11 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
+  by_host:
+    192.168.33.16:
+    - *id001
+    - *id002
+    - *id003
   custom: []
   form_processing: null
   formplayer:
