--- a/tests/postgresql_config/2018-04-04-softlayer-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-softlayer-snapshot/.generated.yml
@@ -1,6 +1,7 @@
 postgresql_dbs:
   all:
-  - create: true
+  - &id001
+    create: true
     django_alias: default
     django_migrate: true
     host: 10.162.36.205
@@ -12,7 +13,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id002
+    create: true
     django_alias: p1
     django_migrate: true
     host: 10.162.36.205
@@ -23,11 +25,10 @@ postgresql_dbs:
     pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
-    shards:
-    - 0
-    - 204
+    shards: [0, 204]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id003
+    create: true
     django_alias: p2
     django_migrate: true
     host: 10.162.36.205
@@ -38,11 +39,10 @@ postgresql_dbs:
     pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
-    shards:
-    - 205
-    - 409
+    shards: [205, 409]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id004
+    create: true
     django_alias: p3
     django_migrate: true
     host: 10.162.36.205
@@ -53,11 +53,10 @@ postgresql_dbs:
     pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
-    shards:
-    - 410
-    - 614
+    shards: [410, 614]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id005
+    create: true
     django_alias: p4
     django_migrate: true
     host: 10.162.36.205
@@ -68,11 +67,10 @@ postgresql_dbs:
     pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
-    shards:
-    - 615
-    - 819
+    shards: [615, 819]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id006
+    create: true
     django_alias: p5
     django_migrate: true
     host: 10.162.36.205
@@ -83,11 +81,10 @@ postgresql_dbs:
     pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
-    shards:
-    - 820
-    - 1023
+    shards: [820, 1023]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id007
+    create: true
     django_alias: proxy
     django_migrate: true
     host: 10.162.36.205
@@ -99,7 +96,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id008
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: 10.162.36.205
@@ -111,7 +109,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id009
+    create: true
     django_alias: ucr
     django_migrate: true
     host: 10.162.36.205
@@ -123,7 +122,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id010
+    create: true
     django_alias: null
     django_migrate: true
     host: 10.162.36.205
@@ -135,7 +135,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id011
+    create: true
     django_alias: icds-ucr
     django_migrate: true
     host: 10.162.36.205
@@ -147,6 +148,19 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
+  by_host:
+    10.162.36.205:
+    - *id001
+    - *id002
+    - *id003
+    - *id004
+    - *id005
+    - *id006
+    - *id007
+    - *id008
+    - *id009
+    - *id010
+    - *id011
   custom:
   - create: true
     django_alias: icds-ucr
@@ -174,9 +188,7 @@ postgresql_dbs:
         pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
-        shards:
-        - 0
-        - 204
+        shards: [0, 204]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
         create: true
@@ -190,9 +202,7 @@ postgresql_dbs:
         pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
-        shards:
-        - 205
-        - 409
+        shards: [205, 409]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
         create: true
@@ -206,9 +216,7 @@ postgresql_dbs:
         pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
-        shards:
-        - 410
-        - 614
+        shards: [410, 614]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
         create: true
@@ -222,9 +230,7 @@ postgresql_dbs:
         pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
-        shards:
-        - 615
-        - 819
+        shards: [615, 819]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
         create: true
@@ -238,9 +244,7 @@ postgresql_dbs:
         pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
-        shards:
-        - 820
-        - 1023
+        shards: [820, 1023]
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
       create: true
