--- a/tests/postgresql_config/2018-04-04-swiss-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-swiss-snapshot/.generated.yml
@@ -1,6 +1,7 @@
 postgresql_dbs:
   all:
-  - create: true
+  - &id001
+    create: true
     django_alias: default
     django_migrate: true
     host: 127.0.0.1
@@ -12,7 +13,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id002
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: 127.0.0.1
@@ -24,7 +26,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id003
+    create: true
     django_alias: ucr
     django_migrate: false
     host: 127.0.0.1
@@ -36,7 +39,8 @@ postgresql_dbs:
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id004
+    create: true
     django_alias: null
     django_migrate: true
     host: 127.0.0.1
@@ -48,6 +52,12 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
+  by_host:
+    127.0.0.1:
+    - *id001
+    - *id002
+    - *id003
+    - *id004
   custom: []
   form_processing: null
   formplayer:
